# EdgeDetection

./: README.md
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetection/: MainActivity.java  mainActivityKotlin.kt
app/src/main/java/com/example/edgedetection/gl/: GLRenderer.java
app/src/main/java/com/example/edgedetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  index.js  index.ts  tsconfig.json
